# corebluetooth-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
corebluetooth/: Cargo.toml  README.md
corebluetooth-async/: Cargo.toml  README.md
corebluetooth-async/examples/: scan-async.rs  scan.rs
corebluetooth-async/src/: central_manager.rs  error.rs  lib.rs  peripheral.rs  util.rs
corebluetooth/examples/: scan.rs
corebluetooth/src/: advertisement_data.rs  btuuid.rs  central.rs  central_manager.rs  characteristic.rs  descriptor.rs  dispatch.rs  error.rs  l2cap_channel.rs  lib.rs  peripheral.rs  service.rs  util.rs
dispatch-executor/: Cargo.toml  README.md
dispatch-executor/src/: lib.rs
