[workspace]
resolver = "3"
members = ["corebluetooth", "corebluetooth-async", "dispatch-executor"]

[workspace.dependencies]
async-io = "2.4.1"
btuuid = { version = "0.1.0", features = ["std", "uuid"] }
corebluetooth = { path = "corebluetooth" }
dispatch2 = "0.3.0"
dispatch-executor = { path = "dispatch-executor" }
futures-io = "0.3.31"
futures-lite = { version = "2.6.0", default-features = false }
objc2 = "0.6.1"
objc2-core-bluetooth = "0.3.1"
objc2-core-foundation = "0.3.1"
objc2-foundation = "0.3.1"
uuid = "1.17.0"
tracing = { version = "0.1.41", default-features = false }
