[workspace]
resolver = "3"
members = ["corebluetooth", "corebluetooth-async", "dispatch-executor"]

[workspace.dependencies]
btuuid = { version = "0.1.0", features = ["std", "uuid"] }
corebluetooth = { version = "0.1.0", path = "corebluetooth" }
dispatch2 = "0.3.0"
dispatch-executor = { version = "0.1.0", path = "dispatch-executor" }
objc2 = "0.6.1"
objc2-core-bluetooth = "0.3.1"
objc2-core-foundation = "0.3.1"
objc2-foundation = "0.3.1"
uuid = "1.17.0"
tracing = { version = "0.1.41", default-features = false }
