[package]
name = "corebluetooth-async"
version = "0.1.0"
edition = "2024"
description = "An asynchronous wrapper for the `corebluetooth` crate"
documentation = "https://docs.rs/corebluetooth"
repository = "https://github.com/alexmoon/corebluetooth-rs"
license = "MIT OR Apache-2.0"
keywords = ["bluetooth", "BLE", "corebluetooth", "ios", "macos"]
categories = ["api-bindings", "hardware-support", "os::macos-apis"]

[dependencies]
async-broadcast = "0.7.2"
btuuid = { workspace = true }
corebluetooth = { workspace = true }
dispatch-executor = { workspace = true }
futures-channel = "0.3.31"
objc2 = { workspace = true }
objc2-core-bluetooth = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
futures-lite = { version = "2.6.0" }
tokio = { version = "1.45.1", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
